src/objects/MUSW__Equipment__c.object
<CustomObject>
    <fields>
        <fullName>Chlorinator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chlorinator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commercial_System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercial System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Depth_Limiting_Form_Factor_Orgnl_Grade__c</fullName>
        <description>Depth to Limiting Factor From Original Grade (inches)</description>
        <label>Depth to Limiting Factor From Original G</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Wastewater_Flow_GPD__c</fullName>
        <label>Design Wastewater Flow (GPD)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1000 gpd or less</fullName>
                </value>
                <value>
                    <fullName>1000 - 2000 gpd</fullName>
                </value>
                <value>
                    <fullName>&gt; 5000 gpd</fullName>
                </value>
                <value>
                    <fullName>2001 - 5000 gpd</fullName>
                </value>
                <value>
                    <fullName>5000 gpd or less</fullName>
                </value>
                <value>
                    <fullName>5000 - 10000 gpd</fullName>
                </value>
                <value>
                    <fullName>greater than 10000 gpd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dispersal_Area_Reduced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dispersal Area Reduced</description>
        <label>Dispersal Area Reduced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effluent_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Effluent Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Experiment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Experiment</description>
        <label>Experiment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Floodplain__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Floodplain</description>
        <label>Floodplain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flow_Rate__c</fullName>
        <description>Flow Rate (GPD)</description>
        <label>Flow Rate (GPD)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUD_One__c</fullName>
        <description>HUD# One</description>
        <label>HUD# One</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUD_Three__c</fullName>
        <description>HUD# Three</description>
        <label>HUD# Three</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUD_Two__c</fullName>
        <description>HUD# Two</description>
        <label>HUD# Two</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <description>Length</description>
        <label>Length</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__CustomerId__c</fullName>
        <label>CustomerId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Description__c</fullName>
        <inlineHelpText>Description of the equipment</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Fixture_Color__c</fullName>
        <label>Fixture Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
                <value>
                    <fullName>Spun Aluminum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__GIS_ID__c</fullName>
        <label>GIS ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__GIS_ObjectID__c</fullName>
        <label>GIS ObjectID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Geolocation__c</fullName>
        <inlineHelpText>Location of the equipment</inlineHelpText>
        <label>Geolocation</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MUSW__Install_Date__c</fullName>
        <inlineHelpText>The date the equipment was installed (Optional)</inlineHelpText>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Issued_Number__c</fullName>
        <description>Filled in when a permanent sequence number is issued. It prevents subsequent triggering of the sequence number code.</description>
        <label>Issued No.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__LastModifiedDate__c</fullName>
        <label>LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__LightType__c</fullName>
        <label>LightType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Metal Halide</fullName>
                </value>
                <value>
                    <fullName>Mercury</fullName>
                </value>
                <value>
                    <fullName>Metal Halide Coated</fullName>
                </value>
                <value>
                    <fullName>Mercury Coated</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Manufacture_Date__c</fullName>
        <inlineHelpText>The date of equipment manufacture</inlineHelpText>
        <label>Manufacture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Manufacturer__c</fullName>
        <inlineHelpText>The company name of the manufacturer of the equipment</inlineHelpText>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__MeterInstallDate__c</fullName>
        <label>MeterInstallDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__MeterSize__c</fullName>
        <label>MeterSize</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Model__c</fullName>
        <inlineHelpText>The manufacturer&apos;s model name</inlineHelpText>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__ModuleInstallDate__c</fullName>
        <label>ModuleInstallDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__ModuleSerialNumber__c</fullName>
        <label>ModuleSerialNumber</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Parcel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Parcel related to the Equipment</inlineHelpText>
        <label>Parcel</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipLabel>Equipments</relationshipLabel>
        <relationshipName>Equipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Serial_Number__c</fullName>
        <inlineHelpText>The serial number on the equipment</inlineHelpText>
        <label>Serial Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__SubType__c</fullName>
        <label>SubType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MUSW__Equipment_SubTypes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <inlineHelpText>The type of equipment (Required - No default).</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MUSW__Equipment_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Maintenance Required</description>
        <label>Maintenance Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <description>Make</description>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>Method</description>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>Model</description>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Submittal_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Submittal Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for Permit</description>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Equipments</relationshipLabel>
        <relationshipName>Equipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Replacement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replacement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Replacement_of_Existing_System__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Replacement of Existing System</description>
        <label>Replacement of Existing System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sanitary_Permit_Issued__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sanitary Permit Issued</description>
        <label>Sanitary Permit Issued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <description>Size</description>
        <label>Size</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Previously_Titled__c</fullName>
        <description>State Previously Titled</description>
        <label>State Previously Titled</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Provinces</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tank_Replacement_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tank Replacement Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Component_Manual__c</fullName>
        <label>Type of Component Manual</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>At-Grade Component Manual</fullName>
                </value>
                <value>
                    <fullName>In-ground Component Manual</fullName>
                </value>
                <value>
                    <fullName>Mound Component Manual</fullName>
                </value>
                <value>
                    <fullName>Pressure Distribution Component Manual</fullName>
                </value>
                <value>
                    <fullName>Other - Please specify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UV_Disinfection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UV Disinfection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <description>VIN Number</description>
        <label>VIN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <description>Width</description>
        <label>Width</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Made__c</fullName>
        <description>Year Made</description>
        <label>Year Made</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Equipment</label>
    <listViews>
        <fullName>MUSW__All</fullName>
        <columns>NAME</columns>
        <columns>MUSW__Description__c</columns>
        <columns>MUSW__Type__c</columns>
        <columns>MUSW__SubType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>